# app

./: .replit  backend_test.py  dubai_business_test.py  error_handling_test.py  pyproject.toml  test_result.md
.emergent/: summary.txt
backend/: .env  config.py  models.py  server.py
backend/services/: ai_service.py
frontend/: .env  craco.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: AIProblemSolver.jsx  MatrixChatSystem.jsx  MatrixInteractive.jsx  MatrixParticles.jsx  MatrixRain.jsx  MatrixWaves.jsx  MobileMatrixOptimizer.jsx  Navigation.jsx  NowhereDigitalWebsite.jsx  UltimatePlatformDashboard.jsx
frontend/src/data/: mock.js
frontend/src/pages/: HomePage.jsx  ServicesPage.jsx
mate-603445e5baf88fd3f34f3943b0608cd90c984900/frontend/: .env
