[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "black>=25.9.0",
    "boto3>=1.40.35",
    "cryptography>=46.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.116.2",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "motor>=3.7.1",
    "mypy>=1.18.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "sendgrid>=6.12.5",
    "typer>=0.18.0",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]
